--- a/index.html
+++ b/index.html
@@ -10,22 +10,40 @@
         <header>
             <div class="logo">
                 <img id="logo" src="afbeeldingen\img-tea-cozy-logo.webp"/>
-            </div>
-           <div class="menu">
-                <ul>
-                    <li>mission</li>
-                    <li>featured tea</li>
-                    <li>location</li>
-                </ul>
+            </div>    
+            <div class="nav"
+                <nav>
+                    <a href="#mission">Mission</a>
+                    <a href="#featuredtea">Featured tea</a>
+                    <a href="">Location</a>
+                </nav>
            </div>
          
             
         </header>
 
-        <main>
-            <div class="mission">
-                <p>test</p>
-            </div>
+        <main class="main">
+
+            <section>
+                <div class="mission">
+                    <h2>Our mission</h2>
+                    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+                </div>
+            </section>
+
+            <section class="month">
+                <div id="featuredtea">
+                    <h2>Tea of the Month</h2>
+                    <h4>What's steeping at The Tea Cozy</h4>
+                </div>
+                <div id="image">
+                    <img src="afbeeldingen/img-berryblitz.webp"><h4>Fall Berry Blitz Tea</h4></img>
+                    <img src="afbeeldingen\img-spiced-rum.webp"><h4>Spiced Rum Tea</h4></img>
+                    <img src="afbeeldingen\img-donut.webp"><h4>Seasonal Donut</h4></img>
+                    <img src="afbeeldingen\img-myrtle-ave.webp"><h4>Myrtle Ave Tea</h4></img>
+                    <img src="afbeeldingen\img-bedford-bizarre.webp"><h4>Bedford Bizarre Tea</h4></img>
+                </div>
+            </section>
 
         </main>
     </body>
