--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav>
                     <a href="#mission">Mission</a>
                     <a href="#featuredtea">Featured tea</a>
-                    <a href="">Location</a>
+                    <a href=".location">Location</a>
                 </nav>
            </div>
          
@@ -24,6 +24,7 @@
 
         <main class="main">
 
+            <!--mission--> 
             <section>
                 <div class="mission">
                     <h2>Our mission</h2>
@@ -31,20 +32,65 @@
                 </div>
             </section>
 
+            <!--Featured Tea-->
             <section class="month">
                 <div id="featuredtea">
                     <h2>Tea of the Month</h2>
                     <h4>What's steeping at The Tea Cozy</h4>
                 </div>
                 <div id="image">
-                    <img src="afbeeldingen/img-berryblitz.webp"><h4>Fall Berry Blitz Tea</h4></img>
-                    <img src="afbeeldingen\img-spiced-rum.webp"><h4>Spiced Rum Tea</h4></img>
-                    <img src="afbeeldingen\img-donut.webp"><h4>Seasonal Donut</h4></img>
-                    <img src="afbeeldingen\img-myrtle-ave.webp"><h4>Myrtle Ave Tea</h4></img>
-                    <img src="afbeeldingen\img-bedford-bizarre.webp"><h4>Bedford Bizarre Tea</h4></img>
+                    <div>
+                        <img src="afbeeldingen/img-berryblitz.webp"/>
+                        <h4>Fall Berry Blitz Tea</h4>
+                    </div>
+                    <div>
+                        <img src="afbeeldingen\img-spiced-rum.webp"/>
+                        <h4>Spiced Rum Tea</h4>
+                    </div>
+                    <div>
+                        <img src="afbeeldingen\img-donut.webp"/>
+                        <h4>Seasonal Donut</h4>
+                    </div>
+                    <div>
+                        <img src="afbeeldingen\img-myrtle-ave.webp"/>
+                        <h4>Myrtle Ave Tea</h4>
+                    </div>
+                    <div>
+                        <img src="afbeeldingen\img-bedford-bizarre.webp"/>
+                        <h4>Bedford Bizarre Tea</h4>
+                    </div>
+
                 </div>
             </section>
 
+            <!--Locations-->
+            <section>
+                <div class="location">
+                    <div>
+                        <h2>Locations</h2>
+                    </div>
+                    <div class="locbox">
+                        <div id="adress">
+                            <h3>Downton</h3>
+                            <h4>384 West 4th St</h4>
+                            <h4>Suite 108</h4>
+                            <h4>Portland, Maine</h4>
+                        </div>
+                        <div id="adress">
+                            <h3>East Bayside</h3>
+                            <h4>3433 Phisherman's Avenue</h4>
+                            <h4>(northwest Corner)</h4>
+                            <h4>Portland, Maine</h4>
+                        </div>
+                        <div id="adress">
+                            <h3>Oakdale</h3>
+                            <h4>515 Crescent Avenue</h4>
+                            <h4>Second Floor</h4>
+                            <h4>Portland, Maine</h4>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
