--- a/index.html
+++ b/index.html
@@ -15,17 +15,15 @@
                 <nav>
                     <a href="#mission">Mission</a>
                     <a href="#featuredtea">Featured tea</a>
-                    <a href=".location">Location</a>
+                    <a href="#location">Location</a>
                 </nav>
-           </div>
-         
-            
+           </div> 
         </header>
 
         <main class="main">
 
             <!--mission--> 
-            <section>
+            <section id="mission">
                 <div class="mission">
                     <h2>Our mission</h2>
                     <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
@@ -65,7 +63,7 @@
 
             <!--Locations-->
             <section>
-                <div class="location">
+                <div class="location" id="location">
                     <div>
                         <h2>Locations</h2>
                     </div>
@@ -94,6 +92,19 @@
                     </div>
                 </div>
             </section>
+
+            <!--Contact-->
+            <section>
+                <div class="contact">
+                    <h1>The Tea Cozy</h1>
+                    <h5>contact@theteacozy.com</h5>
+                    <h5>917-555-8904</h5>
+                </div>
+            </section>
         </main>
+
+        <footer>
+            <div>Copyright The Tea Cosy 2017</div>
+        </footer>
     </body>
 </html>
